Resources/Styles/search.scss
/* Copyright 2020-2021 Dave Verwer, Sven A. Schmidt, and other contributors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* -------------------------------------------------------------------------
  All styling related to the fields that initiate searches.
---------------------------------------------------------------------------- */

/* Search section of the home page. */

section.search {
  margin: 0;

  form {
    display: grid;
    grid-template-columns: auto 50px;
    border: 1px var(--input-border) solid;
    background-color: var(--input-background);

    input[type='search'] {
      padding: 12px;
      font-size: 25px;
      font-weight: 600;
      line-height: 1.2;
      color: var(--input-text);
      background-color: var(--input-background);
      border: none;
      width: 100%;

      &:focus {
        outline: none;
      }

      &::-webkit-search-cancel-button {
        -webkit-appearance: none; // remove the default "clear" button style.

        height: 15px;
        width: 15px;
        background-image: var(--image-clear-search);
        background-size: 15px;
        background-repeat: no-repeat;
        background-position: center center;
      }
    }

    button {
      margin: 0;
      border: none;
      background-color: var(--input-background);
      background-image: var(--image-magnifying-glass);
      background-size: 23px;
      background-repeat: no-repeat;
      background-position: center center;
    }
  }

  .filter_suggestions {
    margin-top: 5px;
    font-size: 12px;

    a {
      cursor: pointer;
    }
  }

  &.home {
    background-image: radial-gradient(var(--header-gradient-start) 0%, var(--header-gradient-end) 75%);
    background-color: var(--header-background);
    color: var(--white);

    .inner {
      padding: 70px 0;
      display: flex;
      flex-direction: column;
      align-items: center;
    }

    h3 {
      margin: 0;
      text-align: center;
      font-size: 18px;
      font-weight: 600;
    }

    form {
      margin: 30px 0;
      width: 90%;
      max-width: 600px;
      border: none;
    }
  }
}

/* Search field in the navigation bar. */

nav {
  li.search {
    & > a {
      display: none;
    }

    & > form {
      display: grid;
      grid-template-columns: auto 30px;
      background-color: var(--input-background);
      border: 1px var(--input-border) solid;
      max-width: 160px;

      input[type='search'] {
        width: 100%;
        padding: 5px;
        font-weight: 600;
        line-height: 1.2;
        font-size: 15px;
        color: var(--input-text);
        background-color: var(--input-background);
        border: none;

        &:focus {
          outline: none;
        }

        &::-webkit-search-cancel-button {
          display: none;
        }
      }

      button {
        margin: 0;
        border: none;
        background-color: var(--input-background);
        background-image: var(--image-magnifying-glass);
        background-size: 14px;
        background-repeat: no-repeat;
        background-position: center center;
      }
    }
  }
}

@media screen and (max-width: $mobile-breakpoint) {
  nav {
    li.search {
      & > a {
        display: block;
        width: 25px;
        height: 25px;
        background-image: var(--image-magnifying-glass);
        background-size: 20px;
        background-repeat: no-repeat;
        background-position: center center;
        border: none;
      }

      & > form {
        display: none;
      }
    }
  }
}

